--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+pandas==1.1.5
+statsmodels==0.12.1
 uvicorn==0.13.4
 pydantic==1.8.2
-requests==2.26.0
-statsmodels==0.12.1
-pandas==1.1.5
-fastapi==0.70.1
+gunicorn==20.1.0
+fastapi==0.70.0
 python_dateutil==2.8.2
+uvloop==0.16.0
+httptools
+json
+math
